0.84.2
 * Added Realm.isEmpty().
 * Fixed a bug making it impossible to convert a field to become required during a migration (#1695).
 * Fixed a bug making it impossible to read Realms created using primary keys and created by iOS (#1703).

0.84.1
 * Updated Realm Core to 0.94.4
   - Fixed a bug that could cause a crash when running the same query multiple times.
 * Updated ProGuard configuration. See documentation https://realm.io/docs/java/latest/#proguard for more details.
 * Updated Kotlin example to use 1.0.0-beta.
 * Fixed warnings reported by `lint -Xlint:all` (#1644).
 * Fixed a bug where simultaneous opening and closing a Realm from different threads might result in a NullPointerException (#1646).
 * Fixed a bug which made it possible to externally modify the encryption key in a RealmConfiguration (#1678).

0.84.0
 * Added support for async queries and transactions.
 * Added support for parsing JSON Dates with timezone information. (Thank you @LateralKevin!)
 * Added RealmQuery.isEmpty().
 * Added Realm.isClosed() method.
 * Added Realm.distinct() method.
 * Added RealmQuery.isValid(), RealmResults.isValid() and RealmList.isValid(). Each method checks whether the instance is still valid to use or not(for example, the Realm has been closed or any parent object has been removed).
 * Added Realm.isInTransaction() method.
 * Updated Realm Core to version 0.94.3
   - Fallback for mremap() now work correctly on BlackBerry devices.
 * Following methods in managed RealmList now throw IllegalStateException instead of native crash when RealmList.isValid() returns false: add(int,RealmObject), add(RealmObject)
 * Following methods in managed RealmList now throw IllegalStateException instead of ArrayIndexOutOfBoundsException when RealmList.isValid() returns false: set(int,RealmObject), move(int,int), remove(int), get(int)