@@ -2,6 +2,7 @@
  * Added Realm.isEmpty().
  * Fixed a bug making it impossible to convert a field to become required during a migration (#1695).
  * Fixed a bug making it impossible to read Realms created using primary keys and created by iOS (#1703).
+ * Fixed a bug cached column indexes were cleared improperly.
 
 0.84.1
  * Updated Realm Core to 0.94.4
